--- a/style.css
+++ b/style.css
@@ -23,3 +23,10 @@
     border-color: red;
 }
 
+.reggae-one-regular {
+    font-family: "Reggae One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+
